Crash when using Lasso select in Graph Editor #42972

Closed
opened 2014-12-20 12:27:30 +01:00 by Leon Cheung · 11 comments
Member

System Information
Windows 8.1 64bit | GTX680

Blender Version
Broken: (example: 2.73 test build1 d7e4944

Short description of error
When using Lasso in Grapsh editor, blender crashed.

lasso_in_curve_editor.blend

Thanks for checking.

**System Information** Windows 8.1 64bit | GTX680 **Blender Version** Broken: (example: 2.73 test build1 d7e4944 **Short description of error** When using Lasso in Grapsh editor, blender crashed. [lasso_in_curve_editor.blend](https://archive.blender.org/developer/F132979/lasso_in_curve_editor.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @particleemitter

Added subscriber: @particleemitter

can confirm in version using 93c4ba7 (fresh builder.blender.org download)
didn't crash in version f1ea1da (which is a month old build I was using previously)

can confirm in version using 93c4ba7 (fresh builder.blender.org download) didn't crash in version f1ea1da (which is a month old build I was using previously)

Added subscriber: @mont29

Added subscriber: @mont29

I cqnnot make it crash here on linux with latest master. Might be a windows-only issue, but could you please first attach here a .blend file that always crash for you?

I cqnnot make it crash here on linux with latest master. Might be a windows-only issue, but could you please first attach here a .blend file that always crash for you?
Author
Member

@mont29 Sure. Please see the updated attachment. :) Just simply open it, then Ctrl + LMB draggin in Graph Editor.

@mont29 Sure. Please see the updated attachment. :) Just simply open it, then Ctrl + LMB draggin in Graph Editor.

Eeeek, sorry, stupid me, I 'read' "node editor"... :/

Anyway, can confirm the crash. thanks for the report.

Eeeek, sorry, stupid me, I 'read' "node editor"... :/ Anyway, can confirm the crash. thanks for the report.
Campbell Barton was assigned by Bastien Montagne 2014-12-20 13:42:41 +01:00

This issue was referenced by 296a92f5f3

This issue was referenced by 296a92f5f3a7d31fb82e81d78773656253086387

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 296a92f5f3.

Closed by commit 296a92f5f3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42972
No description provided.