Fix T42972: fcurve lasso select crash