source/blender/editors/space_graph/graph_select.c
@@ -249,7 +249,7 @@ static void borderselect_graphkeys(
 		data_lasso->rectf_scaled = &scaled_rectf;
 		ked.data = data_lasso;
 	}
-	if (mode == BEZT_OK_REGION_CIRCLE) {
+	else if (mode == BEZT_OK_REGION_CIRCLE) {
 		struct KeyframeEdit_CircleData *data_circle = data;
 		data_circle->rectf_scaled = &scaled_rectf;
 		ked.data = data;
